manufacturing-edge-ai-ml/factory/main/templates/manuela-stormshift/messaging/messaging-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: manuela-stormshift-messaging
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
