manufacturing-edge-ai-ml/factory/main/templates/manuela-stormshift/messaging/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: messaging
spec:
  host: messaging-manuela-stormshift-messaging.apps.staging-edge.devcluster.openshift.com
